<resources>
    <string name="app_name">Lazz</string>
    <string name="title_activity_navigation">navigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- This is for Login -->
    <string name="welcome_text">Welcome to Sports Club</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="signin">Sign in</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register now</string>

    <!-- This is for Register -->
    <string name="register_text">Welcome to join us</string>
    <string name="signup">Sign up</string>
    <string name="ensure_password_input_hint">Confirm</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="loginRightNow">Have a account,login in</string>

    <!-- This is for bottom navigation -->
    <string name="title_home">Home</string>
    <string name="title_group">Group</string>
    <string name="title_me">Community</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="noAppointment">还没有预约</string>
    <string name="gotoAppointment">发现精彩</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- This is for left navigation-->
    <string name="intro">School of Software Engineering</string>
    <string name="mail">info@edu.bjtu.cn</string>
    <string name="setting">设置</string>
    <string name="logout">注销</string>
    <string name="main_app_icon">this is the main app icon</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="favorites">Favorites</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="group_name000">分组名称</string>
    <string name="member000">0/8</string>
    <string name="name000">name</string>
    <string name="activity_type000">activity type</string>
    <string name="number_of_participants000">Number Of Participants</string>
    <string name="locations000">Locations</string>
    <string name="todo000">加入这个组</string>
    <string name="like000">点赞</string>
    <string name="save000">收藏</string>
    <string name="grouppicture000">群组图片</string>
    <string name="groups010">Me</string>


    <!-- This is for left map-->
    <string name="Input">Input you want to find</string>
    <string name="start">Input Start</string>
    <string name="end">Input  End</string>
    <string name="search">Search</string>
    <string name="route">Route</string>
    <string name="switches">Switch</string>
    <string name="mapmode">Map mode</string>
    <string name="hotmap">hotmap</string>
    <string name="create_room_button">Create Room</string>
    <string name="title_activity_test_navigation">test_navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- This is for left camera-->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>


</resources>
