<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="#00000000"
    android:layout_height="150dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_group_black_24dp"
        android:contentDescription="@string/grouppicture000" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/name000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            android:text="@string/activity_type000"/>
        <TextView
            android:id="@+id/Member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            android:text="@string/number_of_participants000"/>
        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            android:text="@string/locations000"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.9">

        <ImageButton
            android:id="@+id/collectButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/favorite"
            android:contentDescription="@string/save000" />

        <ImageButton
            android:id="@+id/AddGroup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/ic_add_24"
            android:contentDescription="@string/todo000" />

        <ImageButton
            android:id="@+id/GoodButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/good"
            android:contentDescription="@string/like000" />


    </LinearLayout>
</LinearLayout>

</RelativeLayout>
