
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sports.yue.UI.UI.activity.mapActivity"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/first_title"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:layout_marginLeft="15dp"-->
    <!--android:textColor="@color/colorBlack"-->
    <!--android:textSize="20dp"/>-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="15dp"-->
    <!--android:text="@string/exam_items"/>-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/second_title"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_marginLeft="15dp"-->
    <!--android:textSize="17dp"-->
    <!--android:textColor="@color/colorBlack"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="15dp"-->
    <!--android:text="@string/item_info"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start: "
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/map_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14dp"/>
        </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#E0E0E0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/position2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Destination: "/>

            <TextView
                android:id="@+id/endpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14dp"/>
        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/buttonserach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
        <Button
            android:id="@+id/buttonroute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route"/>
        <Button
            android:id="@+id/buttonswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switches"/>
        <Button
            android:id="@+id/buttonchoose_map_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapmode"/>
    </LinearLayout>


    <com.baidu.mapapi.map.MapView
        android:id="@+id/mmap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.baidu.mapapi.map.MapView>



</LinearLayout>

